--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,18 +7,15 @@ spring:
     active: ${PROFILE_ACTIVE:dev}
   datasource:
     url: ${PERSISTENCE_URL:jdbc:mysql://localhost:3306/cohelum}
-    username: ${PERSISTENCE_USER:devLocal}
-    password: ${PERSISTENCE_PASSWORD:Dev2022$}
+    username: ${PERSISTENCE_USER:root}
+    password: ${PERSISTENCE_PASSWORD:1234}
     driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
       maximum-pool-size: 100
-      minimum-idel: 50
+      minimum-idle: 50
   jpa:
-    database-platfrom: org.hibernate.dialect.MySQL5InnoDBDialect
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     generate-ddl: false
     show-sql: true
     hibernate:
       ddl-auto: none
-  mvc:
-    pathmatch:
-      matching-strategy: ant-path-matcher
