--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
 server:
   port: 8095
   servlet:
@@ -22,3 +25,7 @@ spring:
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
         implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+  mvc:
+    pathmatch:
+      matching-strategy: ant-path-matcher
+
