--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,5 +28,6 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ant-path-matcher
-
-
+spring.servlet.multipart:
+  max-file-size: 20MB
+  max-request-size: 20MB
