--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,9 +9,9 @@ spring:
   profiles:
     active: ${PROFILE_ACTIVE:dev}
   datasource:
-    url: ${PERSISTENCE_URL:jdbc:mysql://localhost:3306/cohelum1}
-    username: ${PERSISTENCE_USER:root}
-    password: ${PERSISTENCE_PASSWORD:1234}
+    url: ${PERSISTENCE_URL:jdbc:mysql://localhost:3306/cohelum}
+    username: ${PERSISTENCE_USER:devLocal}
+    password: ${PERSISTENCE_PASSWORD:Dev2022$}
     driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
       maximum-pool-size: 100
@@ -31,3 +31,8 @@ spring:
 spring.servlet.multipart:
   max-file-size: 20MB
   max-request-size: 20MB
+logging:
+  level:
+    ROOT: INFO
+    com: DEBUG
+
